[tool.poetry]
name = "deep-time-series"
version = "0.1.2"
description = """Deep learning library for time series \
forecasting based on PyTorch."""
authors = ["Sangwon <lsw91.main@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_time_series"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.0", source = "torch"}
torchvision = {version = "^0.15.1", source = "torch"}
torchaudio = {version = "^2.0.1", source = "torch"}
lightning = "^2.0.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.5.1"
xarray = "^2023.2.0"
rich = "^13.3.2"
scikit-learn = "^1.2.2"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu117"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
pytest = "^7.2.2"
sphinx = "^6.1.3"
sphinx-copybutton = "^0.5.1"
pydata-sphinx-theme = "^0.13.1"
esbonio = "^0.16.1"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
