[project]
name = "deep-time-series"
version = "0.1.2"
description = "Deep learning library for time series forecasting based on PyTorch."
authors = [
    {name = "Sangwon", email = "lsw91.main@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.1,<1.0.0",
    "torchaudio>=2.0.1,<3.0.0",
    "lightning>=2.0.0,<3.0.0",
    "numpy>=1.24.2,<2.0.0",
    "pandas>=1.5.3,<2.0.0",
    "matplotlib>=3.5.1,<4.0.0",
    "xarray>=2023.2.0",
    "rich>=13.3.2,<14.0.0",
    "scikit-learn>=1.2.2,<2.0.0",
    "markupsafe>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.21.3,<7.0.0",
    "pytest>=7.2.2,<8.0.0",
    "sphinx>=6.1.3,<7.0.0",
    "sphinx-copybutton>=0.5.1,<1.0.0",
    "pydata-sphinx-theme>=0.13.1,<1.0.0",
    "esbonio>=0.16.1,<1.0.0",
    "pre-commit>=3.3.0,<4.0.0",
]

[tool.setuptools]
packages = ["deep_time_series"]

[tool.uv.dependency-groups]
dev = [
    "ipykernel>=6.21.3,<7.0.0",
    "pytest>=7.2.2,<8.0.0",
    "sphinx>=6.1.3,<7.0.0",
    "sphinx-copybutton>=0.5.1,<1.0.0",
    "pydata-sphinx-theme>=0.13.1,<1.0.0",
    "esbonio>=0.16.1,<1.0.0",
    "pre-commit>=3.3.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
